[gd_scene load_steps=11 format=3 uid="uid://d1uy22pv42td3"]

[ext_resource type="Script" uid="uid://dbjqp3gp5vovf" path="res://addons/flowkit/ui/editor.gd" id="1_orosd"]
[ext_resource type="PackedScene" uid="uid://drmro4mknscop" path="res://addons/flowkit/ui/workspace/no_action_available.tscn" id="1_qt4uu"]
[ext_resource type="PackedScene" uid="uid://bh6btjhk8rtay" path="res://addons/flowkit/ui/workspace/event.tscn" id="2_gk5k1"]
[ext_resource type="Script" uid="uid://con4s50tuscrj" path="res://addons/flowkit/ui/v_box_container.gd" id="2_il07c"]
[ext_resource type="Script" uid="uid://dg46wtoo70ju2" path="res://addons/flowkit/ui/menu_bar.gd" id="2_tc3av"]
[ext_resource type="PackedScene" uid="uid://cct35451lta26" path="res://addons/flowkit/ui/workspace/condition.tscn" id="3_l3oxx"]
[ext_resource type="PackedScene" uid="uid://dl3kh1mn8jl71" path="res://addons/flowkit/ui/workspace/action.tscn" id="4_awtyg"]
[ext_resource type="PackedScene" uid="uid://buxqkjavs51qe" path="res://addons/flowkit/ui/modals/select.tscn" id="8_select"]
[ext_resource type="PackedScene" uid="uid://crj5y8vh2m3qi" path="res://addons/flowkit/ui/modals/select_event.tscn" id="9_select_event"]
[ext_resource type="PackedScene" uid="uid://c7j2y9vh3m4rj" path="res://addons/flowkit/ui/modals/select_action.tscn" id="10_select_action"]
[ext_resource type="PackedScene" uid="uid://d8k3z0wi5n6pk" path="res://addons/flowkit/ui/modals/expression_editor.tscn" id="11_expression_editor"]
[ext_resource type="PackedScene" uid="uid://b9m4a1xj6n7ql" path="res://addons/flowkit/ui/modals/select_condition.tscn" id="12_select_condition"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bg"]
bg_color = Color(0.12, 0.12, 0.15, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button"]
bg_color = Color(0.25, 0.35, 0.45, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.4, 0.6, 0.95, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_orosd")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_bg")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 2

[node name="MarginContainer" type="MarginContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 8
script = ExtResource("2_il07c")

[node name="MenuBar" type="MenuBar" parent="ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
script = ExtResource("2_tc3av")

[node name="File" type="PopupMenu" parent="ScrollContainer/MarginContainer/VBoxContainer/MenuBar"]
oversampling_override = 1.0
size = Vector2i(150, 100)
item_count = 1
item_0/text = "New Event Sheet"
item_0/id = 0

[node name="Event" parent="ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource("2_gk5k1")]
layout_mode = 2

[node name="Condition" parent="ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource("3_l3oxx")]
layout_mode = 2

[node name="Action" parent="ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource("4_awtyg")]
layout_mode = 2

[node name="No Action Available" parent="ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource("1_qt4uu")]
visible = false
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 0.53207755, 0.46697795, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.49803922)
theme_override_font_sizes/font_size = 21
vertical_alignment = 1

[node name="AddEventButton" type="Button" parent="ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.95, 1, 1)
theme_override_font_sizes/font_size = 14
theme_override_styles/normal = SubResource("StyleBoxFlat_button")
theme_override_styles/pressed = SubResource("StyleBoxFlat_button")
theme_override_styles/hover = SubResource("StyleBoxFlat_button")
text = "➕ Add Event"

[node name="AddConditionButton" type="Button" parent="ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.95, 1, 1)
theme_override_font_sizes/font_size = 14
theme_override_styles/normal = SubResource("StyleBoxFlat_button")
theme_override_styles/pressed = SubResource("StyleBoxFlat_button")
theme_override_styles/hover = SubResource("StyleBoxFlat_button")
text = "➕ Add Condition (Runs Every Frame)"

[node name="AddActionButton" type="Button" parent="ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.95, 1, 1)
theme_override_font_sizes/font_size = 14
theme_override_styles/normal = SubResource("StyleBoxFlat_button")
theme_override_styles/pressed = SubResource("StyleBoxFlat_button")
theme_override_styles/hover = SubResource("StyleBoxFlat_button")
text = "➕ Add Action"

[node name="SelectModal" parent="." instance=ExtResource("8_select")]

[node name="SelectEventModal" parent="." instance=ExtResource("9_select_event")]

[node name="SelectActionNodeModal" parent="." instance=ExtResource("8_select")]

[node name="SelectActionModal" parent="." instance=ExtResource("10_select_action")]

[node name="SelectConditionNodeModal" parent="." instance=ExtResource("8_select")]

[node name="SelectConditionModal" parent="." instance=ExtResource("12_select_condition")]

[node name="ExpressionEditorModal" parent="." instance=ExtResource("11_expression_editor")]

[node name="ConditionExpressionEditorModal" parent="." instance=ExtResource("11_expression_editor")]

[connection signal="new_sheet" from="ScrollContainer/MarginContainer/VBoxContainer/MenuBar" to="." method="_on_menu_bar_new_sheet"]
[connection signal="id_pressed" from="ScrollContainer/MarginContainer/VBoxContainer/MenuBar/File" to="ScrollContainer/MarginContainer/VBoxContainer/MenuBar" method="_on_file_id_pressed"]
[connection signal="pressed" from="ScrollContainer/MarginContainer/VBoxContainer/AddEventButton" to="." method="_on_add_event_button_pressed"]
[connection signal="pressed" from="ScrollContainer/MarginContainer/VBoxContainer/AddConditionButton" to="." method="_on_add_condition_button_pressed"]
[connection signal="pressed" from="ScrollContainer/MarginContainer/VBoxContainer/AddActionButton" to="." method="_on_add_action_button_pressed"]
[connection signal="node_selected" from="SelectModal" to="." method="_on_select_modal_node_selected"]
[connection signal="event_selected" from="SelectEventModal" to="." method="_on_select_modal_event_selected"]
[connection signal="node_selected" from="SelectActionNodeModal" to="." method="_on_select_action_node_selected"]
[connection signal="action_selected" from="SelectActionModal" to="." method="_on_select_action_modal_action_selected"]
[connection signal="node_selected" from="SelectConditionNodeModal" to="." method="_on_select_condition_node_selected"]
[connection signal="condition_selected" from="SelectConditionModal" to="." method="_on_select_condition_modal_condition_selected"]
[connection signal="expressions_confirmed" from="ExpressionEditorModal" to="." method="_on_expression_editor_confirmed"]
[connection signal="expressions_confirmed" from="ConditionExpressionEditorModal" to="." method="_on_condition_expression_editor_confirmed"]
